--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <title>Burger</title>
   </head>
-  <body>
+  <body class="p-4">
       <header class="bg-primarycolor dark:bg-darkcolor fixed top-0 left-0 w-full z-50 " id="header">
-      <nav class="container relative h-14 flex justify-between items-center">
+      <nav class="p-4 container relative h-14 flex justify-between items-center">
         <div>
          <a href="#" class="text-2xl uppercase font-oswald">
           Bur<span class="text-secondarycolor">ger</span>
@@ -183,7 +183,7 @@
     </section>
     <!--~~~~~~~~~~~~~~~ About ~~~~~~~~~~~~~~~-->
     <section id="about">
-      <div class="container flex flex-col gap-10 md:flex-row">
+      <div class="container flex flex-col gap-10 lg:flex-row">
         <div><img src="img/about.jpg" alt="about image" class="about__img rounded-lg"></div>
         <div class="flex-1 about__content">
           <h2 class="section-title">FIND FOOD AND DRINKS, ALL-IN-ONE PLACE FOR YOUR BEST TASTE.</h2>
