Fix navigation menu and contact section styles

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li>
               <a href="#contact" class="nav-link  hover:text-secondarycolor ease-in duration-200">Contact</a>
             </li>
+            
            </ul>
            <div class="absolute top-[0.7rem] md:hidden right-4 text-2xl cursor-pointer" id="nav-close">
             <i class="ri-close-line"></i>
@@ -523,10 +524,10 @@
       </div>
     </section>
     <!--~~~~~~~~~~~~~~~ Contact ~~~~~~~~~~~~~~~-->
-     <section id="contact" class="bg-secondarycolor  py-16">
+     <section id="contact" class="bg-secondarycolor  py-16 p-4">
       <div class="container flex flex-col gap-5 md:items-center md:flex-row">
         <div class="space-y-4 md:flex-1">
-          <h2 class="section-title text-blackcolor">GET EXCLUSIVE UPDATE</h2>
+          <h2 class="section-title text-blackcolor ">GET EXCLUSIVE UPDATE</h2>
           <P class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum earum quaerat voluptatum laboriosam tenetur officia adipisci unde? Voluptates unde iusto recusandae soluta qui nesciunt animi omnis sunt vitae. Voluptatibus similique cupiditate quia magni repellendus.</P>
         </div>
         <div class="flex flex-col gap-3 md:flex-row md:flex-1">
